--- a/connectionclass-sample/src/main/res/layout/activity_main.xml
+++ b/connectionclass-sample/src/main/res/layout/activity_main.xml
@@ -20,9 +20,13 @@
 
     <TextView
             android:id="@+id/connection_class"
-            android:textSize="32dp"
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"/>
+
+    <TextView
+        android:id="@+id/connection_type"
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"/>
 
     <ProgressBar
             android:id="@+id/runningBar"
